# OpenAI-Agents-SDK

./: README.md  agent.py
01_openai_agents/06_streaming/chatbot-with-chainlite/: .env  main.py  pyproject.toml
01_openai_agents/Class-04/: Dataclass.py  Generics.py  callable.py  genwithde.py
01_openai_agents/tools/: .env  main.py  pyproject.toml
Assignments/01_ai_agents_first/example-pkg/: pyproject.toml
Assignments/Raglearning/: Ragprojectpinecon.ipynb
Assignments/online/OPENROUTER/: AI_agent_task2.ipynb
Assignments/online/agentscreation/: samadclassassignment01may.ipynb
Assignments/onsite/04_Streaming/: 04_streaming_gemini.ipynb
Assignments/onsite/tools/tools use/: tools_openai_agents_sdk.ipynb
Assignments/onsite/tools/websearchtools/: main.py  pyproject.toml
Learning/01_ai_agents_first/00_swarm/: README.md
Practice/01_ai_agents_first/02_openrouter/: ai_agent_task1.py
advancedbyrepo/runningagents/: runner.py
advancedquizprepration/agent/: agent.py  readme.md  running.py
decodingopenaisdk/: 01_hello.py  02_hello_handoff.py  03_agent_ins.py  04_acontext.py  05_immutable_context.py  06_structure.py
maintargets/: main1.py  main3.py  maintargets.py
other data/01_openai_agents/Class-04/: Dataclass.py  Generics.py
other data/Assignments/01_openai_agents/01_python_syntax/: 00_python_syntax_dataclasses.py
other data/samad/: main.py  pyproject.toml
samad/: .env  chatbot.py  pyproject.toml
task/: README.md  TContext.py  dataclassopenai.py  purposerunnerclass.py  runner.py  whycallbale.py
what is LLM/: README.md
(+10 files in other folders)
